<resources>
    <string name="app_name">Smart List</string>
    <string name="total_price">Total: %1$s %2$s</string>
    <string name="price">Price</string>
    <string name="item">Item</string>
    <string name="settings">Settings</string>
    <string name="currency">Currency</string>
    <string name="currency_status">Change the currency of Smart List</string>
    <string name="recommendations">Smart Recommendations</string>
    <string name="recommendations_status">Give me suggestions when I type an products into the list</string>
    <string name="products">Memorised Products</string>
    <string name="products_status">Remove a products that was memorised after you added it to the list</string>
    <string name="fill">Smart Fill</string>
    <string name="fill_status">When the price field is empty, type in the price automatically</string>
    <string name="limit">Price Limit</string>
    <string name="limit_status">Set the limit of the price that will be automatically filled</string>
    <string name="color">Color</string>
    <string name="color_status">Change the colors of Smart List or turn on/off night mode</string>
    <string name="generate_excel">Generate excel</string>
    <string name="export">Export</string>
    <string name="see_list">See List</string>
    <string name="excel">Excel</string>
    <string name="documents">Documents</string>
    <string name="excel_status">Exports the list as an Microsoft Excel Document in Internal Storage in the folder Smart List</string>
    <string name="fill_limit">Set the limit of Smart Fill</string>
    <string name="fill_aware">Higher limit means worse performance</string>
    <string name="storage">Export location</string>
    <string name="storage_status">Choose the export location to internal or external storage for the Microsoft Excel Document</string>
    <string name="night">Night Mode</string>
    <string name="night_status">Switch between day mode and night mode</string>
    <string name="total">Total Amount</string>
    <string name="total_status">Add the total spent amount at the end of the generated file</string>
    <string name="utilities">Utilities</string>
    <string name="personalization">Personalization</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="design">Change design</string>
    <string name="design_status">Change to the other design theme\n(Colors and night mode are active only with the material design)</string>
    <string name="limit_set">Limit will be set to:</string>
    <string name="no_files">No files found\n\nAfter generating an Microsoft Excel Document you will be able to see it here</string>
    <string name="set_offset">Set Offset</string>
    <string name="offset_description">Offset is used to make a secondary total adding the given value</string>
    <string name="offset">Offset:</string>
    <string name="total_price_with_offset">Total with offset: %1$s %2$s</string>
    <string name="update_offset">Update Offset</string>
    <string name="update_offset_status">Update the offset automatically after the entire list has been deleted</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="manage_categories_status">Change a products\'s category, add or delete categories</string>
    <string name="category_name">Category name:</string>
    <string name="statistics">Statistics</string>
    <string name="graph_columns">Graph Columns</string>
    <string name="graph_columns_status">Select how many columns do you want the bar charts to show</string>
    <string name="set_no_columns">Set the number of columns</string>
    <string name="set_no_columns_aware">By default the number is set to 12 so it can illustrate an entire year</string>
    <string name="columns_set">Columns will be set to:</string>
</resources>
