<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/set_offset"
        android:textColor="@color/colorLightBlack"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/offset_description"
        android:textColor="@color/colorLightSilver"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offset"
            android:textSize="16sp"
            android:textColor="@color/colorLightSilverDark" />

        <EditText
            android:id="@+id/edit_dialog_light_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:inputType="numberSigned|numberDecimal"
            android:textSize="16sp"
            android:textColor="@color/colorLightSilverDark" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_dialog_light_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="4dp"
        android:text="@string/total_price" />

    <TextView
        android:id="@+id/text_dialog_light_total_offset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="4dp"
        android:text="@string/total_price_with_offset" />

</LinearLayout>