<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_fragment_excel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/excel"
        android:textColor="@color/colorLightSilverDark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingEnd="16dp"
            android:paddingStart="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingEnd="64dp"
                android:paddingStart="64dp"
                android:paddingTop="16dp"
                android:text="@string/excel_status"
                android:textColor="@color/colorLightSilver" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLightSilverLight" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <Switch
                    android:id="@+id/switch_light_excel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/switch_light_excel"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingEnd="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingBottom="8dp"
                        android:text="@string/total"
                        android:textColor="@color/colorLight"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/total_status"
                        android:textColor="@color/colorLightSilver" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/button_export_excel"
                    android:layout_width="128dp"
                    android:layout_height="32dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/corners_light"
                    android:gravity="center"
                    android:text="@string/export"
                    android:textAllCaps="false"
                    android:textColor="@color/background"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
